--- a/Javi/Videojuegos/src/app/sobre-nosotros/sobre-nosotros.component.html
+++ b/Javi/Videojuegos/src/app/sobre-nosotros/sobre-nosotros.component.html
@@ -14,7 +14,7 @@
     </div>
 
     <div>
-        <h4>Somos Ana Núñez y Javier Núñez. Lorem Ipsum es simplemente el texto de relleno de las imprentas y
+        <p>Somos Ana Núñez y Javier Núñez. Lorem Ipsum es simplemente el texto de relleno de las imprentas y
              archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, 
              cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos 
              y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, 
@@ -22,7 +22,7 @@
               al original. Fue popularizado en los 60s con la creación de las hojas "Letraset", las cuales contenian 
               pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker,
                el cual incluye versiones de Lorem Ipsum.
-        </h4>
+        </p>
     </div>
 
 </body>
